04-orchestration/03-ingress-routing-tls-cert-manager/api-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  namespace: ingress-tls-demo
  labels:
    app.kubernetes.io/name: api-service
    app.kubernetes.io/part-of: devops-sre-mini-projects
    app: api-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: api
          image: ingress-tls-app:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 3
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: ingress-tls-demo
  labels:
    app.kubernetes.io/name: api-service
    app.kubernetes.io/part-of: devops-sre-mini-projects
    app: api-service
spec:
  type: ClusterIP
  selector:
    app: api-service
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
